Truncate and limit width of social list. closes https://github.com/owncast/owncast/issues/845

--- a/styles/config-socialhandles.scss
+++ b/styles/config-socialhandles.scss
@@ -55,3 +55,10 @@
     }
   }
 }
+
+.handle-url {
+  width: 10vw;
+  overflow: hidden;
+  white-space: nowrap;
+  text-overflow: ellipsis;
+}
